--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -1,13 +1,21 @@
 body {
   font-family: Roboto;
   margin: 2em;
-  background-color: #f5f5f5;
+  background-color: rgb(247, 247, 247);
   padding: 20px;
+  font-family: 'Roboto', sans-serif;
+  background-color: rgb(247, 247, 247);
 }
 
 canvas {
   margin-top: 1em;
   max-width: 100%;
+}
+
+#codeInput,
+#searchButton {
+  width: 100%;
+  box-sizing: border-box;
 }
 
 
